Add MSE to eval script, update plotting

--- a/results/primary.ipynb
+++ b/results/primary.ipynb
@@ -25,54 +25,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean(df):\n",
+    "def clean(df, topk=False):\n",
     "    df = df[df['State'] == 'finished']\n",
     "\n",
-    "    patterns = ['l0$', 'frac_recovered$', 'l2_loss$', 'loss_original$', 'loss_reconstructed']\n",
+    "    if topk:\n",
+    "        patterns = ['effective_l0$', 'frac_recovered$', 'mse_loss$', 'loss_original$', 'loss_reconstructed']\n",
+    "    else:\n",
+    "        patterns = ['l0$', 'frac_recovered$', 'mse_loss$', 'loss_original$', 'loss_reconstructed']\n",
     "    filtered_columns = df.columns[df.columns.str.contains('|'.join(patterns))]\n",
-    "\n",
     "    df = df[filtered_columns]\n",
-    "\n",
     "    df.columns = [col.split('/')[-1] for col in df.columns]\n",
     "    \n",
-    "    l0 = df[\"l0\"].to_numpy().flatten()\n",
-    "    l2_loss = df[\"l2_loss\"].to_numpy().flatten()\n",
+    "    if topk:\n",
+    "        l0 = df[\"l0\"].to_numpy().flatten()\n",
+    "    else:\n",
+    "        l0 = df[\"effective_l0\"].to_numpy().flatten()\n",
+    "    mse_loss = df[\"mse_loss\"].to_numpy().flatten()\n",
     "    frac_recovered = df[\"frac_recovered\"].to_numpy().flatten()\n",
     "    loss_original = df[\"loss_original\"].to_numpy().flatten()\n",
     "    loss_reconstructed = df[\"loss_reconstructed\"].to_numpy().flatten()\n",
     "    delta_ce = loss_reconstructed - loss_original\n",
     "\n",
-    "    data = np.array([l0, l2_loss, frac_recovered, delta_ce]).T\n",
-    "    df = pd.DataFrame(data, columns=['l0', 'l2_loss', 'frac_recovered', 'delta_ce'])\n",
-    "    df = df.sort_values(by='l0')\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_topk(df):\n",
-    "    df = df[df['State'] == 'finished']\n",
-    "\n",
-    "    patterns = ['effective_l0$', 'frac_recovered$', 'l2_loss$', 'loss_original$', 'loss_reconstructed']\n",
-    "    filtered_columns = df.columns[df.columns.str.contains('|'.join(patterns))]\n",
-    "\n",
-    "    df = df[filtered_columns]\n",
-    "\n",
-    "    df.columns = [col.split('/')[-1] for col in df.columns]\n",
-    "    \n",
-    "    l0 = df[\"effective_l0\"].to_numpy().flatten()\n",
-    "    l2_loss = df[\"l2_loss\"].to_numpy().flatten()\n",
-    "    frac_recovered = df[\"frac_recovered\"].to_numpy().flatten()\n",
-    "    loss_original = df[\"loss_original\"].to_numpy().flatten()\n",
-    "    loss_reconstructed = df[\"loss_reconstructed\"].to_numpy().flatten()\n",
-    "    delta_ce = loss_reconstructed - loss_original\n",
-    "\n",
-    "    data = np.array([l0, l2_loss, frac_recovered, delta_ce]).T\n",
-    "    df = pd.DataFrame(data, columns=['l0', 'l2_loss', 'frac_recovered', 'delta_ce'])\n",
+    "    data = np.array([l0, mse_loss, frac_recovered, delta_ce]).T\n",
+    "    df = pd.DataFrame(data, columns=['l0', 'mse_loss', 'frac_recovered', 'delta_ce'])\n",
     "    df = df.sort_values(by='l0')\n",
     "    return df"
    ]
@@ -90,7 +65,7 @@
     "df_gated = clean(df_gated)\n",
     "\n",
     "df_topk = pd.read_csv(\"primary-topk.csv\")\n",
-    "df_topk = clean_topk(df_topk)"
+    "df_topk = clean(df_topk, topk=True)"
    ]
   },
   {
@@ -117,15 +92,15 @@
     }
    ],
    "source": [
-    "plt.plot(df_topk['l0'], df_topk['l2_loss'], label='TopK', marker='s', color='#9467bd')\n",
-    "plt.plot(df_gated['l0'], df_gated['l2_loss'], label='Gated', marker='*', color='#1f77b4')\n",
-    "plt.plot(df_relu['l0'], df_relu['l2_loss'], label='ReLU', marker='o', color='#2ca02c')\n",
+    "plt.plot(df_topk['l0'], df_topk['mse_loss'], label='TopK', marker='s', color='#9467bd')\n",
+    "plt.plot(df_gated['l0'], df_gated['mse_loss'], label='Gated', marker='*', color='#1f77b4')\n",
+    "plt.plot(df_relu['l0'], df_relu['mse_loss'], label='ReLU', marker='o', color='#2ca02c')\n",
     "\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "\n",
     "plt.xlabel(\"Sparsity (L0)\")\n",
-    "plt.ylabel(\"L2 Loss\")\n",
+    "plt.ylabel(\"MSE\")\n",
     "\n",
     "plt.legend()\n",
     "\n",
@@ -133,7 +108,7 @@
     "\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"l0_l2loss.png\")\n",
+    "plt.savefig(\"l0_mse.png\")\n",
     "plt.show()"
    ]
   },
